@@ -21,12 +21,12 @@ import com.jayway.restassured.builder.MultiPartSpecBuilder;
 import com.jayway.restassured.config.EncoderConfig;
 import com.jayway.restassured.filter.Filter;
 import com.jayway.restassured.filter.log.RequestLoggingFilter;
+import com.jayway.restassured.http.Method;
 import com.jayway.restassured.internal.RequestSpecificationImpl;
 import com.jayway.restassured.internal.ResponseParserRegistrar;
 import com.jayway.restassured.internal.ResponseSpecificationImpl;
 import com.jayway.restassured.internal.filter.FilterContextImpl;
 import com.jayway.restassured.internal.http.CharsetExtractor;
-import com.jayway.restassured.internal.http.Method;
 import com.jayway.restassured.internal.log.LogRepository;
 import com.jayway.restassured.internal.support.PathSupport;
 import com.jayway.restassured.internal.util.SafeExceptionRethrower;
