@@ -1,0 +1,33 @@
+/*
+ * Copyright 2015 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.jayway.restassured.http;
+
+/**
+ * Enumeration of valid HTTP methods that may be used in REST Assured.
+ *
+ * @author Johan Haleby
+ */
+public enum Method {
+    GET,
+    PUT,
+    POST,
+    DELETE,
+    HEAD,
+    TRACE,
+    OPTIONS,
+    PATCH
+}
